--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
   word-spacing: 3.2px;
-  color: #2c3e50;
+  background: #000;
+  color: #ebebeb;
   overflow-x: hidden;
 }
 
@@ -41,18 +42,21 @@ h1 span {
   position: relative;
   width: 90%;
   max-width: 1200px;
-  min-height: 100vh;
+  height: 100vh;
   padding: 144px 0px 0px 0px;
   margin: 0 auto;
 }
 
 .home-bg-img-ctn {
   position: absolute;
-  right: -30%;
+  right: -10%;
   top: 0;
   width: 100%;
   height: 100%;
-  background: #888;
+  background: url(./img.jpg) center no-repeat;
+  background-size: cover;
+  clip-path: polygon(47% 0, 100% 0, 100% 100%, 0 100%);
+  opacity: 0.5;
   z-index: -10;
 }
 
