--- a/style.css
+++ b/style.css
@@ -40,11 +40,11 @@ h1 span {
 
 .home-ctn {
   position: relative;
-  width: 90%;
   max-width: 1200px;
   height: 100vh;
-  padding: 144px 0px 0px 0px;
+  padding: 144px 1rem 1rem 1rem;
   margin: 0 auto;
+  box-shadow:  inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 }
 
 .home-bg-img-ctn {
