--- a/style.css
+++ b/style.css
@@ -30,12 +30,20 @@ h1 {
   font-family: Playfair Display, "Times New Roman", Times, serif;
   font-size: 48px;
   line-height: 1.25;
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 40px;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 h1 span {
   display: inline-block;
+  margin-right: 16px;
+  /* mix-blend-mode: exclusion; */
+}
+
+.home {
+  position: relative;
 }
 
 .home-ctn {
@@ -49,26 +57,28 @@ h1 span {
 
 .home-bg-img-ctn {
   position: absolute;
-  right: -10%;
+  right: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background: url(./img.jpg) center no-repeat;
   background-size: cover;
-  clip-path: polygon(47% 0, 100% 0, 100% 100%, 0 100%);
-  opacity: 0.5;
+  /* clip-path: polygon(47% 0, 100% 0, 100% 100%, 0 100%); */
+  clip-path: polygon(100% 0, 100% 100%, 19% 64%, 0 0);
+  opacity: 0.4;
+  filter: blur(16px);
   z-index: -10;
 }
 
 @media (min-width: 1000px) {
   .home-ctn {
+    padding-top: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
   .home-text-ctn {
-    width: 48%;
-    max-width: 480px;
+    width: 50%;
   }
 }
