--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Urbanist:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Urbanist:wght@400;600;700&display=swap');
 
 *,
 *::before,
@@ -27,7 +27,7 @@ body {
 }
 
 h1 {
-  font-family: Playfair Display, "Times New Roman", Times, serif;
+  font-family: Playfair Display, 'Times New Roman', Times, serif;
   font-size: 48px;
   line-height: 1.25;
   display: flex;
@@ -52,7 +52,7 @@ h1 span {
   height: 100vh;
   padding: 144px 1rem 1rem 1rem;
   margin: 0 auto;
-  box-shadow:  inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 }
 
 .home-bg-img-ctn {
